@@ -7,6 +7,7 @@
 - Enable detailed dumps for Jetty thread pools, which will help getting
   more information when debugging with the JMX dump operation.
 - Add support for PostgreSQL in dbpool.
+- Delete FileUtils from testing module.
 
 * 0.149
 
